<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".MainActivity">

    <Button
            android:layout_width="371dp"
            android:layout_height="43dp" android:id="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            android:text="@string/btnLogin_text"
            app:layout_constraintVertical_bias="0.61" app:layout_constraintHorizontal_bias="0.538"/>
    <TextView
            android:text="@string/tVLanguage_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tVLanguage" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="12dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="368dp"
            android:layout_height="108dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.442">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtUsername" android:hint="@string/username"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txtPassword" android:hint="@string/password"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="368dp"
            android:layout_height="159dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/linearLayout3">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:srcCompat="@drawable/logo" android:id="@+id/imageView"
        />
    </LinearLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="368dp"
            android:layout_height="162dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="36dp">

        <TextView
                android:text="@string/tVForgot_text"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:id="@+id/tVForgot"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="36dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/tvOr_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvOr" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="152dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintHorizontal_bias="0.129"
                app:layout_constraintVertical_bias="0.503"/>
        <TextView
                android:text="@string/tvFbLink_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/tvFbLink" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.486" app:layout_constraintVertical_bias="0.713"/>
    </android.support.constraint.ConstraintLayout>
    <TextView
            android:text="@string/tvSignUpLink_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSignUpLink" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="96dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
    <Spinner
            android:layout_width="107dp"
            android:layout_height="20dp"
            android:id="@+id/sPLanguage" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="1.0" app:layout_constraintHorizontal_bias="0.306"/>
</android.support.constraint.ConstraintLayout>